--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="Style/style.css" type="text/css">
     <script src="https://kit.fontawesome.com/3212e149bd.js" crossorigin="anonymous"></script>
     <title>HappyCarz</title>
-    <link rel="icon" href="Images/car.jpg" type="image/icon type">
+    <link rel="icon" href="images/car.jpg" type="image/icon type">
 
 </head>
 <body>
