--- a/support.html
+++ b/support.html
@@ -25,16 +25,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent" data-toggle="collapse" data-target=".navbar-collapse">
               <ul class="navbar-nav mx-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="file:///C:/Users/syeds/OneDrive/Desktop/HappyCars/index.html#home">Home</a>
+                  <a class="nav-link" href="https://syedsibtainrazvi.github.io/HappyCarz.github.io/#home">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="file:///C:/Users/syeds/OneDrive/Desktop/HappyCars/index.html#about">About</a>
+                  <a class="nav-link" href="https://syedsibtainrazvi.github.io/HappyCarz.github.io/#about">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="file:///C:/Users/syeds/OneDrive/Desktop/HappyCars/index.html#service">Plans</a>
+                  <a class="nav-link" href="https://syedsibtainrazvi.github.io/HappyCarz.github.io/#service">Plans</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="file:///C:/Users/syeds/OneDrive/Desktop/HappyCars/index.html#choose">Why Us?</a>
+                  <a class="nav-link" href="https://syedsibtainrazvi.github.io/HappyCarz.github.io/#choose">Why Us?</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#home1">Support</a>
