--- a/support.html
+++ b/support.html
@@ -18,7 +18,7 @@
     <header id="home1">
       <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
           <div class="container-fluid">
-            <a class="navbar-brand" href="file:///C:/Users/syeds/OneDrive/Desktop/HappyCars/index.html#home">HappyCarz</a>
+            <a class="navbar-brand" href="https://syedsibtainrazvi.github.io/HappyCarz.github.io/#home">HappyCarz</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
