--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         </div>
         <div class="col-md-2 mb-3">
           <h6 class="text-uppercase font-weight-bold">
-            <a href="file:///C:/Users/syeds/OneDrive/Desktop/HappyCars/support.html#about">Support</a>
+            <a href="support.html">Support</a>
           </h6>
         </div>
       </div>
