--- a/support.html
+++ b/support.html
@@ -111,22 +111,22 @@
     <div class="row text-center d-flex justify-content-center pt-5 mb-3">
       <div class="col-md-2 mb-3">
         <h6 class="text-uppercase font-weight-bold">
-          <a href="file:///C:/Users/syeds/OneDrive/Desktop/HappyCars/index.html">Home</a>
+          <a href="https://syedsibtainrazvi.github.io/HappyCarz.github.io/#home">Home</a>
         </h6>
       </div>
       <div class="col-md-2 mb-3">
         <h6 class="text-uppercase font-weight-bold">
-          <a href="#file:///C:/Users/syeds/OneDrive/Desktop/HappyCars/index.html#about">About</a>
+          <a href="https://syedsibtainrazvi.github.io/HappyCarz.github.io/#about">About</a>
         </h6>
       </div>
       <div class="col-md-2 mb-3">
         <h6 class="text-uppercase font-weight-bold">
-          <a href="file:///C:/Users/syeds/OneDrive/Desktop/HappyCars/index.html#service">Plans</a>
+          <a href="https://syedsibtainrazvi.github.io/HappyCarz.github.io/#service">Plans</a>
         </h6>
       </div>
       <div class="col-md-2 mb-3">
         <h6 class="text-uppercase font-weight-bold">
-          <a href="file:///C:/Users/syeds/OneDrive/Desktop/HappyCars/index.html#choose">Why Us?</a>
+          <a href="https://syedsibtainrazvi.github.io/HappyCarz.github.io/#choose">Why Us?</a>
         </h6>
       </div>
       <div class="col-md-2 mb-3">
